--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </div>
             <div class="contact">
                 <h3>Kontak</h3>
-                <p><strong>Email:</strong> honongramdan@gmail.com</p>
-                <p><strong>Telepon:</strong> 089508007960</p>
-                <p><strong>Alamat:</strong> Klari</p>
+                <p><strong>Email:</strong> denysiregar@gmail.com</p>
+                <p><strong>Telepon:</strong> 089508003847</p>
+                <p><strong>Alamat:</strong> pejagan</p>
             </div>
             <div class="personal-info">
                 <h3>Informasi Pribadi</h3>
-                <p><strong>Tanggal Lahir:</strong> 24 Januari 2003</p>
+                <p><strong>Tanggal Lahir:</strong> 32 desember 1990</p>
                 <p><strong>Status Pernikahan:</strong> Belum Menikah</p>
                 <p><strong>Kebangsaan:</strong> Indonesia</p>
                 <p><strong>Agama:</strong> Islam</p>
@@ -44,7 +44,7 @@
         <div class="right-side">
             <div class="objective">
                 <h3>About Me</h3>
-                <p>Saya merupakan Mahasiswa Universitas Buana Perjuangan Karawang yang mempunyai keinginan tinggi untuk menjalani kewajiban, dengan berbekal ilmu dan pengalaman saya.</p>
+                <p>Saya merupakan Manusia yang mempunyai keinginan tinggi untuk menjalani kewajiban, dengan berbekal ilmu dan pengalaman saya.</p>
             </div>
             <div class="education">
                 <h3>Pendidikan</h3>
